deploy/go-import-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-import
  namespace: octomaton
  labels:
    app.kubernetes.io/name: go-import
spec:
  selector:
    app.kubernetes.io/name: go-import
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
